popup fix on mobile been-here

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 #result{
     position: absolute;
-    bottom:200px;
+    top: 200px;
     left: 0;
     width: 100%;
     text-align: center;
@@ -956,6 +956,13 @@ footer img{
         width: 50%;
         
     }
+
+    .schedule-header h2{
+        width: 90%;
+    }
+
+  
+    
       #theBody {
        
         width: 90%;
